<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="pt.iscte.daam.appvirtual.LoginActivity">

        <ImageView
            android:layout_width="250dip"
            android:layout_height="150dip"
            android:layout_gravity="center"
            android:src="@mipmap/logo_iscte" />

        <TextView
            style="@style/Txt_Padrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_login" />

        <EditText
            android:id="@+id/edtLogin"
            style="@style/Edt_Padrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/Txt_Padrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_senha" />

        <EditText
            android:id="@+id/edtSenha"
            style="@style/Edt_Padrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/btn_logar" />

    </LinearLayout>

</ScrollView>