<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="110dp">

        <RelativeLayout
            android:id="@+id/lytLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lytTxtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nome"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lytTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lytTxtMinibio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtMinibio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_minibio"
                android:inputType="text"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sexo:" />

        <RadioGroup
            android:id="@+id/groupSexo"
            style="@style/Edt_Padrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masculino" />

            <RadioButton
                android:id="@+id/rbtFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feminino" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Profissão:" />

        <Spinner
            android:id="@+id/spnProfissao"
            style="@style/Edt_Padrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar" />

    </LinearLayout>
</ScrollView>